# llm_bot

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
proto/: llm.proto
src/: bot_handlers.rs  command_handlers.rs  llm_rpc_client.rs  main.rs  openai.rs  telegram_bot.rs
