[package]
name = "llm_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.9.2"
chrono = "0.4.23"
dotenvy = "0.15.6"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.154", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros", "redis-storage", "sqlite-storage", "bincode-serializer"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
